<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/layoutContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_margin" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>


    <LinearLayout
        android:id="@+id/nameLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_margin"
        android:layout_marginRight="@dimen/layout_margin"
        android:layout_marginBottom="@dimen/layout_margin"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/nameLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/label_spacing"
            android:text="@string/name_label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="John Doe" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/photoLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_margin"
        android:layout_marginRight="@dimen/layout_margin"
        android:layout_marginBottom="@dimen/layout_margin"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/photoImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitStart"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/profile_photo" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/genderLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_margin"
        android:layout_marginRight="@dimen/layout_margin"
        android:layout_marginBottom="@dimen/layout_margin"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/genderLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/label_spacing"
            android:text="@string/gender_label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/genderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Male" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/aboutLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_margin"
        android:layout_marginRight="@dimen/layout_margin"
        android:layout_marginBottom="@dimen/layout_margin"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/aboutLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/label_spacing"
            android:text="@string/about_label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/aboutTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="About me" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/schoolLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_margin"
        android:layout_marginRight="@dimen/layout_margin"
        android:layout_marginBottom="@dimen/layout_margin"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/schoolLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/label_spacing"
            android:text="@string/school_label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/schoolTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Best School" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/hobbiesLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_margin"
        android:layout_marginRight="@dimen/layout_margin"
        android:layout_marginBottom="@dimen/layout_margin"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/hobbiesLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/label_spacing"
            android:text="@string/hobbies_label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/hobbiesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Juggling" />
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>